--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Control buttons -->
     <div class="control-buttons">
       <button class="start" id="start-button">Start</button>
-      <button class="stop" id="stop-button">Pause</button>
+      <button class="stop" id="stop-button">Stop</button>
       <button class="reset" id="reset-button">Reset</button>
       <button class="lap" id="lap-button">Lap</button>
     </div>
