--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
     <!-- Control buttons -->
     <div class="control-buttons">
-      <button class="start" id="start-button">Start</button>
-      <button class="stop" id="stop-button">Stop</button>
+      <button class="start" id="start-stop-button">Start</button>
       <button class="reset" id="reset-button">Reset</button>
       <button class="lap" id="lap-button">Lap</button>
     </div>
